fix logo behind & degree name

--- a/src/pages/Today/Today.css
+++ b/src/pages/Today/Today.css
@@ -59,7 +59,8 @@
 }
 
 .overview .icon {
-  margin: -3rem auto
+  margin: -3rem auto;
+  z-index: -1;
 }
 
 .overview .icon svg {
